--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Jun 18 10:14:58 CST 2025
-sdk.dir=C\:\\Users\\luisp\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\jarly\\AppData\\Local\\Android\\Sdk
