--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 18 10:14:58 CST 2025
-sdk.dir=C\:\\Users\\jarly\\AppData\\Local\\Android\\Sdk
+#Wed Jun 18 23:07:45 CST 2025
+sdk.dir=C\:\\Users\\luisp\\AppData\\Local\\Android\\Sdk
