implementación del reproductor para escuchar canciones individuales y albumes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -137,6 +137,9 @@
                 android:value=".activities.PerfilArtistaActivity"/>
         </activity>
 
+        <!-- Reproductor -->
+        <activity android:name=".activities.ReproductorActivity" />
+
     </application>
 
 </manifest>
