--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,6 +128,14 @@
                 android:value=".activities.MenuPrincipalActivity"/>
         </activity>
 
+        <activity
+            android:name=".activities.ListaDeReproduccionActivity"
+            android:parentActivityName=".activities.MenuPrincipalActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MenuPrincipalActivity"/>
+        </activity>
+
         <!-- Chat del artista -->
         <activity
             android:name=".activities.ChatActivity"
